fix: add overflow to prevent page scroll

--- a/shelter/sass/layout/_header.scss
+++ b/shelter/sass/layout/_header.scss
@@ -17,7 +17,7 @@
 
 .header {
   .wrapper {
-    @media screen and (max-width: 768px) {
+    7@media screen and (max-width: 767px) {
       position: relative;
       margin: 0;
       padding: 0;
@@ -33,7 +33,7 @@
     @media screen and (max-width: 1200px) {
       padding-top: 30px;
     }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
@@ -41,7 +41,7 @@
       padding-top: 0;
     }
     nav {
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         position: absolute;
         top: 0;
         right: 0;
@@ -65,7 +65,7 @@
     }
     &.closed {
       nav {
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 767px) {
           right: -100%;
           // animation: slideout 1s ease-in-out;
         }
@@ -74,7 +74,7 @@
   }
   .logo-wrapper {
     z-index: 3;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       position: absolute;
       top: 30px;
       right: 126px;
@@ -94,7 +94,7 @@
 
     ul {
       display: flex;
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         display: none;
         align-items: center;
         flex-direction: column;
@@ -104,13 +104,13 @@
         margin-left: 36px;
         margin-top: -3px;
         transition: color 0.2s ease-in;
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 767px) {
           margin-bottom: 40px;
         }
         a {
           color: $color-dark-s;
           text-decoration: none;
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 767px) {
             font-size: 32px;
             line-height: 1.6;
           }
@@ -146,7 +146,7 @@
     height: 22px;
     z-index: 3;
     transition: transform 0.5s;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       display: flex;
     }
     .bar {
@@ -201,3 +201,7 @@
 // .animated {
 //   animation: slidein 0.5s ease-in-out;
 // }
+
+.fixed {
+  overflow: hidden;
+}
